hide overflow to make sure just in case

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -721,7 +721,7 @@ right: -21px; */ }
 .lc-event-speaker-list .clearline.halfway { display: none; }
 .lc-event-speaker-list .speaker-profile { position: relative; /** force height same as width: http://www.mademyday.de/css-height-equals-width-with-pure-css.html */ }
 .lc-event-speaker-list .speaker-profile.last { margin-right: 0; }
-.lc-event-speaker-list .speaker-profile .sameheight-box { position: relative; width: 100%; background: #f6f6f6; }
+.lc-event-speaker-list .speaker-profile .sameheight-box { position: relative; width: 100%; background: #f6f6f6; overflow: hidden; }
 .lc-event-speaker-list .speaker-profile .sameheight-box:before { content: ""; display: block; padding-top: 100%; }
 .lc-event-speaker-list .speaker-profile .sameheight-box > div { position: absolute; top: 0; right: 0; bottom: 0; left: 0; }
 .lc-event-speaker-list .speaker-profile img { display: block; max-width: 100%; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */ filter: gray; /* IE6-9 */ -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */ width: 100%; }
